[gd_scene load_steps=8 format=3 uid="uid://dyvyux3gwa0bw"]

[ext_resource type="Script" path="res://battle.gd" id="1_4eet7"]
[ext_resource type="Texture2D" uid="uid://bowgufhsynsow" path="res://testing-background.png" id="1_6k6ik"]
[ext_resource type="PackedScene" uid="uid://c1qgwk4bkhdr6" path="res://player_team.tscn" id="2_io34u"]
[ext_resource type="PackedScene" uid="uid://b8aakbebv4k1s" path="res://enemy_team.tscn" id="3_r64ta"]
[ext_resource type="PackedScene" uid="uid://dn3h2mncsod6q" path="res://spell_menu.tscn" id="5_dbthj"]
[ext_resource type="Texture2D" uid="uid://dpevgb46hplit" path="res://temporary_demo_files/FireBALL.png" id="6_m1pp0"]
[ext_resource type="Texture2D" uid="uid://bdlhpayl0qk4q" path="res://temporary_demo_files/knif.png" id="7_nfxb0"]

[node name="battle" type="Node2D"]
script = ExtResource("1_4eet7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = 6.0
offset_right = 1154.0
offset_bottom = 655.0
texture = ExtResource("1_6k6ik")
expand_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 321)

[node name="Player_team" parent="." instance=ExtResource("2_io34u")]
offset_left = 140.0
offset_top = 124.0
offset_right = 396.0
offset_bottom = 1035.0

[node name="enemy_team" parent="." instance=ExtResource("3_r64ta")]
offset_left = 793.0
offset_top = 97.0
offset_right = 927.0
offset_bottom = 490.0

[node name="Button" type="Button" parent="."]
offset_left = 538.0
offset_top = 586.0
offset_right = 668.0
offset_bottom = 642.0
text = "End Turn"

[node name="Spell_Menu" parent="." instance=ExtResource("5_dbthj")]
offset_left = 325.0
offset_top = 591.0
offset_right = 529.0
offset_bottom = 635.0

[node name="energy1" type="TextureRect" parent="."]
offset_left = 705.0
offset_top = 593.0
offset_right = 749.0
offset_bottom = 636.0
texture = ExtResource("6_m1pp0")
expand_mode = 1

[node name="Label1" type="Label" parent="energy1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -10.0
offset_top = -9.0
offset_right = 35.0
offset_bottom = 34.0
scale = Vector2(1.5, 1.5)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="energy2" type="TextureRect" parent="."]
offset_left = 760.0
offset_top = 593.0
offset_right = 804.0
offset_bottom = 636.0
texture = ExtResource("7_nfxb0")
expand_mode = 1

[node name="Label2" type="Label" parent="energy2"]
modulate = Color(0.882353, 0.882353, 0.882353, 1)
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 33.0
offset_bottom = 31.0
scale = Vector2(1.5, 1.5)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 294.0
offset_top = 239.0
offset_right = 887.0
offset_bottom = 442.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
